--- a/UI/package.json
+++ b/UI/package.json
@@ -7,20 +7,23 @@
   },
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "classnames": "^2.2.6",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6",
+    "primeicons": "^1.0.0",
+    "primereact": "^3.0.0-rc.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-table": "^6.8.6",
+    "react-transition-group": "^2.5.3",
     "redux": "^3.5.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.1.0",
-    "reselect": "^4.0.0"
+    "redux-thunk": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
